--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type="button" id="" class="botao c" value="=" onclick="valorResultado()"> 
         </div>
     </div>
-    <h3>© 2020 👉<a href="https://www.github.com/vitorrrocha">Vitor A. B. Rocha</a>👈</h3>
+    <h3>© 2020 👉<a href="http://twixar.me/xzZn">Vitor A. B. Rocha</a>👈</h3>
     <script src="calculadora.js"></script>
 </body>
 </html>
