--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Calculadora JS</title>
 </head>
 <body>
-    <h1>Calculadora JavaScript</h1>
+    <h1>JavaScript Calculator</h1>
     <div class="corpo">
         <div class="tela2" id="tela2"></div>
         <div class="tela1" id="tela1"></div>
